--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "backend": "file:",
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2"
