--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
+    "axios": "^1.12.2",
     "backend": "file:",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
