--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,73 @@
-node_modules
 database_with_instructor
-.vscode
+
+# ============================
+# Node.js
+# ============================
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Build output
+dist/
+build/
+tmp/
+temp/
+
+# Logs
+logs/
+*.log
+logs/*.log
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# PM2
+.pm2/
+.pids/
+
+# Runtime data
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage
+coverage/
+.nyc_output/
+
+# dotenv environment files
+.env
+.env.local
+.env.development
+.env.production
+.env.test
+
+# ============================
+# IDE / Editor
+# ============================
+.vscode/
+.idea/
+*.swp
+
+# ============================
+# Operating system
+# ============================
+.DS_Store
+Thumbs.db
+
+# ============================
+# Uploaded files (Multer)
+# ============================
+uploads/
+public/uploads/
+assets/uploads/
+uploads/avatar/
+uploads/videos/
+uploads/images/
+
+# ============================
+# Other
+# ============================
+*.tsbuildinfo
