--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@getbrevo/brevo": "^3.0.1",
     "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.12.2",
     "backend": "file:",
@@ -12,7 +13,9 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
     "multer": "^2.0.1",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.11",
+    "resend": "^6.6.0"
   },
   "name": "backend",
   "version": "1.0.0",
